--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
-    compileOptions{
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -31,7 +31,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:multidex:1.0.3'
-
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -62,4 +61,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     //Calendar
     implementation 'com.applandeo:material-calendar-view:1.7.0'
+    implementation project(path: ':openCV')
 }
