--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.android.MakeYouStudy"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         multiDexEnabled true
         versionCode 1
@@ -59,6 +59,7 @@ dependencies {
     // TimeTable
     implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     //Calendar
     implementation 'com.applandeo:material-calendar-view:1.7.0'
     implementation project(path: ':openCV')
