Update layout design
전체적으로 layout 디자인하였습니다.
image file 여러 개 추가하였습니다.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".AttendanceRateActivity"/>
         <activity android:name=".Helper.InternetCheck" />
         <activity android:name=".ImageLabelActivity" />
+        <activity android:name=".ImageMatchingActivity"/>
         <activity android:name=".TextRecognitionActivity" />
         <activity android:name=".DiaryActivity" />
         <activity android:name=".Diary_Update" />
