--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     // TimeTable
     implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
     implementation 'com.google.code.gson:gson:2.8.5'
